versions/v2.12/modules/en/pages/about-rancher/overview.adoc
= Overview
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2026-05-05
:page-revdate: {revdate}
:page-community-path: getting-started/overview.adoc 
:page-product-path: about-rancher/overview.adoc
ifeval::["{build-type}" != "community"]
:xref-istio: xref:observability/istio/istio.adoc
:xref-launch-k8s-with-rancher: xref:cluster-deployment/launch-kubernetes-with-rancher.adoc
:xref-infra-providers: xref:cluster-deployment/infra-providers/infra-providers.adoc
:xref-cluster-deployment: xref:cluster-deployment/cluster-deployment.adoc
:xref-authn-authz: xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc
:xref-persistent-storage: xref:cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
:xref-helm-charts-in-rancher: xref:cluster-admin/helm-charts-in-rancher/helm-charts-in-rancher.adoc
:xref-manage-rbac: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/manage-role-based-access-control-rbac.adoc
:xref-ds-backup-restore: xref:cluster-admin/backups-and-restore/backups-and-restore.adoc
:xref-nodes-machinepools: xref:cluster-admin/manage-clusters/nodes-and-machine-pools.adoc
:xref-psa-pss: xref:security/psa-pss.adoc
:xref-fleet: xref:integrations/fleet/fleet.adoc
:xref-project-admin: xref:cluster-admin/project-admin/project-admin.adoc
:xref-k8s-resources-setup: xref:cluster-admin/kubernetes-resources/kubernetes-resources-setup.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-istio: xref:integrations-in-rancher/istio/index.adoc
:xref-launch-k8s-with-rancher: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/index.adoc
:xref-infra-providers: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/index.adoc
:xref-cluster-deployment: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/index.adoc
:xref-authn-authz: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-config/index.adoc
:xref-persistent-storage: xref:how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/index.adoc
:xref-helm-charts-in-rancher: xref:how-to-guides/new-user-guides/helm-charts-in-rancher/index.adoc
:xref-manage-rbac: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/index.adoc
:xref-ds-backup-restore: xref:getting-started/installation-and-upgrade/upgrade-and-roll-back-kubernetes.adoc
:xref-nodes-machinepools: xref:how-to-guides/new-user-guides/manage-clusters/nodes-and-machine-pools.adoc
:xref-psa-pss: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/pod-security-standards.adoc
:xref-fleet: xref:integrations-in-rancher/fleet/index.adoc
:xref-project-admin: xref:how-to-guides/advanced-user-guides/manage-projects/index.adoc
:xref-k8s-resources-setup: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/index.adoc
endif::[]

Rancher is a container management platform built for organizations that deploy containers in production. Rancher makes it easy to run Kubernetes everywhere, meet IT requirements, and empower DevOps teams.

== Run Kubernetes Everywhere

ifeval::["{build-type}" != "srfa"]
Kubernetes has become the container orchestration standard. Most cloud and virtualization vendors now offer it as standard infrastructure. Rancher users have the choice of creating Kubernetes clusters with Rancher Kubernetes Engine (RKE) or cloud Kubernetes services, such as GKE, AKS, and EKS. Rancher users can also import and manage their existing Kubernetes clusters created using any Kubernetes distribution or installer.
endif::[]
ifeval::["{build-type}" == "srfa"]
Kubernetes has become the container orchestration standard. Most cloud and virtualization vendors now offer it as standard infrastructure. Rancher users have the choice of creating Kubernetes clusters with Rancher Kubernetes Engine (RKE) or cloud Kubernetes services, such as EKS. Rancher users can also import and manage their existing Kubernetes clusters created using any Kubernetes distribution or installer.
endif::[]

== Meet IT Requirements

Rancher supports centralized authentication, access control, and monitoring for all Kubernetes clusters under its control. For example, you can:

ifeval::["{build-type}" != "srfa"]
* Use your Active Directory credentials to access Kubernetes clusters hosted by cloud vendors, such as GKE.
endif::[]
ifeval::["{build-type}" == "srfa"]
* Use your Active Directory credentials to access Kubernetes clusters hosted by cloud vendors.
endif::[]
* Setup and enforce access control and security policies across all users, groups, projects, clusters, and clouds.
* View the health and capacity of your Kubernetes clusters from a single-pane-of-glass.

== Empower DevOps Teams

Rancher provides an intuitive user interface for DevOps engineers to manage their application workload. The user does not need to have in-depth knowledge of Kubernetes concepts to start using Rancher. Rancher catalog contains a set of useful DevOps tools. Rancher is certified with a wide selection of cloud native ecosystem products, including, for example, security tools, monitoring systems, container registries, and storage and networking drivers.

The following figure illustrates the role Rancher plays in IT and DevOps organizations. Each team deploys their applications on the public or private clouds they choose. IT administrators gain visibility and enforce policies across all users, clusters, and clouds.

image::platform.png[Platform]

== Features of the Rancher API Server

The Rancher API server is built on top of an embedded Kubernetes API server and an etcd database. It implements the following functionalities:

=== Authorization and Role-Based Access Control

* *User management:* The Rancher API server {xref-authn-authz}[manages user identities] that correspond to external authentication providers like Active Directory or GitHub, in addition to local users.
* *Authorization:* The Rancher API server manages {xref-manage-rbac}[access control] and {xref-psa-pss}[security standards].

=== Working with Kubernetes

* *Provisioning Kubernetes clusters:* The Rancher API server can {xref-cluster-deployment}[provision Kubernetes] on existing nodes, or perform {xref-ds-backup-restore}[Kubernetes upgrades.]
* *Catalog management:* Rancher provides the ability to use a {xref-helm-charts-in-rancher}[catalog of Helm charts] that make it easy to repeatedly deploy applications.
* *Managing projects:* A project is a group of multiple namespaces and access control policies within a cluster. A project is a Rancher concept, not a Kubernetes concept, which allows you to manage multiple namespaces as a group and perform Kubernetes operations in them. The Rancher UI provides features for {xref-project-admin}[project administration] and for {xref-k8s-resources-setup}[managing applications within projects.]
* *Fleet Continuous Delivery:* Within Rancher, you can leverage {xref-fleet}[{fleet-product-name}] to deploy applications from git repositories, without any manual operation, to targeted downstream Kubernetes clusters.
* *Istio:* Our {xref-istio}[integration with Istio] is designed so that a Rancher operator, such as an administrator or cluster owner, can deliver Istio to developers. Then developers can use Istio to enforce security policies, troubleshoot problems, or manage traffic for green/blue deployments, canary deployments, or A/B testing.

=== Working with Cloud Infrastructure

* *Tracking nodes:* The Rancher API server tracks identities of all the {xref-nodes-machinepools}[nodes] in all clusters.
* *Setting up infrastructure:*  When configured to use a cloud provider, Rancher can dynamically provision {xref-infra-providers}[new nodes] and {xref-persistent-storage}[persistent storage] in the cloud.

=== Cluster Visibility

* *Logging:* Rancher can integrate with a variety of popular logging services and tools that exist outside of your Kubernetes clusters.
* *Monitoring:* Using Rancher, you can monitor the state and processes of your cluster nodes, Kubernetes components, and software deployments through integration with Prometheus, a leading open-source monitoring solution.
* *Alerting:* To keep your clusters and applications healthy and driving your organizational productivity forward, you need to stay informed of events occurring in your clusters and projects, both planned and unplanned.

== Editing Downstream Clusters with Rancher

The options and settings available for an existing cluster change based on the method that you used to provision it. For example, only clusters {xref-launch-k8s-with-rancher}[provisioned by RKE] have *Cluster Options* available for editing.

After a cluster is created with Rancher, a cluster administrator can manage cluster membership or manage node pools, among xref:[other options.]

The following table summarizes the options and settings available for each cluster type:

ifeval::["{build-type}" != "srfa"]
include::shared:ROOT:partial$en/cluster-capabilities-updated-table.adoc[]
endif::[]
ifeval::["{build-type}" == "srfa"]
include::shared:ROOT:partial$en/cluster-capabilities-updated-table-srfa.adoc[]
endif::[]
